--- a/Data/EDA.Rmd
+++ b/Data/EDA.Rmd
@@ -9,23 +9,36 @@ Realizaremos en análisis exploratorio de datos para conocer el comportamiento d
 
 ```{r}
 df<- read.csv("~/ITAM/Décimo/index/proyIndVul/Data/BD.csv")
-df<-df[,-c(1,3,4)]
+df.1<-df[,-c(1,3,4)]
 ```
 
 ¿Todas las variables aportan al índice? ¿Qué variables aportan más? ¿Qué variables aportan menos?
 
 ```{r}
 library(corrplot)
-corrplot(cor(df[-1], method = "pearson"), type = "upper", method = "circle")
+corrplot(cor(df.1[-1], method = "pearson"), type = "upper", method = "circle")
 ```
 
 ```{r}
 library(mctest)
-omcdiag(df[c(5,8,10,11,12,13,14)], df[1])
+omcdiag(df.1[c(5,8,10,11,12,13,14)], df.1[1])
 ```
 
 Notemos que las variables que menos se correlacionan con el resto son Remuneraciones, Personas afiliadas a servicio de salud, esperanza de vida, años promedio de escolaridad, camas y carencias de salud. Probamos su no-colinearidad con el determinante de su varianza de correlaciones, el "Red indicator" y la suma de lambda inversa. Aunqeu no pasan otras tres pruebas, las anteriores son suficientes para el futuro PCA que se realizará.
 
+
+```{r}
+library(GGally)
+library(ggplot2)
+df.2<-df.1[c(5,8,10,11,12,13,14)] 
+df.3<-df[-c(2,3,4)]
+```
+
+```{r}
+p <- ggplot(df.3, aes(x=Alc, y=In_inf)) + 
+  geom_boxplot() 
+p+ theme(axis.text.x = element_text(angle = 90))
+```
 
 
 
