--- a/Data/EDA.Rmd
+++ b/Data/EDA.Rmd
@@ -7,39 +7,76 @@ output:
 
 Realizaremos en análisis exploratorio de datos para conocer el comportamiento de nuestas variables.
 
-```{r}
-df<- read.csv("~/ITAM/Décimo/index/proyIndVul/Data/BD.csv")
+```{r,echo = FALSE}
+df<- read.csv("BD.csv")
 df.1<-df[,-c(1,3,4)]
 ```
 
 ¿Todas las variables aportan al índice? ¿Qué variables aportan más? ¿Qué variables aportan menos?
 
-```{r}
+```{r,echo = FALSE}
 library(corrplot)
 corrplot(cor(df.1[-1], method = "pearson"), type = "upper", method = "circle")
 ```
 
-```{r}
+```{r,echo=FALSE}
 library(mctest)
 omcdiag(df.1[c(5,8,10,11,12,13,14)], df.1[1])
 ```
 
-Notemos que las variables que menos se correlacionan con el resto son Remuneraciones, Personas afiliadas a servicio de salud, esperanza de vida, años promedio de escolaridad, camas y carencias de salud. Probamos su no-colinearidad con el determinante de su varianza de correlaciones, el "Red indicator" y la suma de lambda inversa. Aunqeu no pasan otras tres pruebas, las anteriores son suficientes para el futuro PCA que se realizará.
+Notemos que las variables que menos se correlacionan con el resto son Remuneraciones, Personas afiliadas a servicio de salud, esperanza de vida, años promedio de escolaridad, camas y carencias de salud. Probamos su no-colinearidad con el determinante de su varianza de correlaciones, el "Red indicator" y la suma de lambda inversa. Aunque no pasan otras tres pruebas, las anteriores son suficientes para el futuro PCA que se realizará.
 
 
-```{r}
+```{r,echo=FALSE}
 library(GGally)
 library(ggplot2)
-df.2<-df.1[c(5,8,10,11,12,13,14)] 
-df.3<-df[-c(2,3,4)]
+df.2<- cbind(df[,1],df.1[,c(5,8,10,11,12,13,14)])
+```
+```{r,echo=FALSE,include = FALSE}
+categcolum <- function(daf,col,names)
+{
+  v <- as.numeric(scale(daf[,col]))
+  n <- length(names)
+  dim <- length(v)
+  part <- 1/n
+  r <- c()
+  for (i in 1:dim)
+  {
+    if(v[i] <= -1)
+      r[i] <- names[1]
+    else
+      if(v[i] <= 1)
+      r[i] <- names[2]
+      else
+        r[i] <- names[3]
+  }
+  return(r)
+}
 ```
 
-```{r}
+Al ver que muchas de estas variables no aprotaran variabilidad a nuestro indice. Decimos categorizar las variables para obtener visualizaciones que nos ayuden mas.
+
+```{r,echo = FALSE}
+#Construccion de df.3, es decir df.2 + varibles categoricas
+Desem <- categcolum(df,10,c("Bajo","Mediano","Alto"))
+P_Medico <- categcolum(df,12,c("Bajo","Mediano","Alto"))
+df.3 <- cbind(df.2,Desem,P_Medico)
+```
+
+```{r,echo = FALSO}
+library(GGally)
+library(tidyverse)
+
+df.2 %>% ggpairs(columns = c(2:8),upper = list(continuous = wrap('cor',size = 2)))
+```
+
+
+
+```{r,echo=FALSE}
 p <- ggplot(df.3, aes(x=Alc, y=In_inf)) + 
   geom_boxplot() 
 p+ theme(axis.text.x = element_text(angle = 90))
 ```
-
 
 
 
