--- a/Data/EDA.Rmd
+++ b/Data/EDA.Rmd
@@ -9,7 +9,6 @@ Realizaremos en análisis exploratorio de datos para conocer el comportamiento d
 
 ```{r,echo = FALSE}
 df<- read.csv("BD.csv")
-df<-df[,5:13] / df[,3] 
 df.1<-df[,-c(1,3,4)]
 ```
 
@@ -61,8 +60,8 @@ Al ver que muchas de estas variables no aprotaran variabilidad a nuestro indice.
 ```{r,echo = FALSE}
 #Construccion de df.3, es decir df.2 + varibles categoricas
 Desem <- categcolum(df,9,c("Bajo","Mediano","Alto"))
-P_Medico <- categcolum(df,11,c("Bajo","Mediano","Alto"))
-df.3 <- cbind(df.2,Desem,P_Medico)
+#P_Medico <- categcolum(df,11,c("Bajo","Mediano","Alto"))
+df.3 <- cbind(df.2,Desem)
 ```
 
 ```{r,echo = FALSO}
