--- a/Data/EDA v1.1.Rmd
+++ b/Data/EDA v1.1.Rmd
@@ -31,6 +31,7 @@ Realizaremos en análisis exploratorio de datos para conocer el comportamiento d
 df<- read.csv("BD.csv")
 df[,5:13]<-df[,5:13]/df[,3]
 df[,13]<-df[,13]*1000 #Remuneración en miles de pesos
+df[,15]<-df[,15]/100 
 ```
 
 Queremos buscar outliers
@@ -48,4 +49,44 @@ Revisamos los diagrama de dispersión de cada variable contra el resto y en toda
 
 Entonces, continuaremos con el anális de colinearidad para elegir las variables más convenientes para el análisis:
 
+Visualizar las correlaciones entre variabeles es útil para descartar a las que están altamente correlacionadas, pues podrían explicar los mismo y nos interesa la repetición:
+
+```{r,echo = FALSE}
+ggcorr(df[-c(1,2,3,4)], label = T)
+```
+
+```{r}
+ggcorr(df[-c(1,2,3,4,5,6,7,11,16)], label = T)
+```
+Nos damos cuenta que ingreso inferior, promedio años escolares, carencias de salud, carencias alimentos y personal médico están muy correlacionadas.
+
+```{r}
+omcdiag(df[-c(1,2,3,4,5,6,7,11,16)], df.1[2])
+```
+
+CLaramente pasa la prueba de no colonearidad; por lo que, nos quedamos con esperanza de vida, personas afiliadas a servicios, remuneracion, casos confirmados, desempleados, solicitudes de desempleados y carencias de servicios.
+
+Al ver que muchas de estas variables no aprotaran variabilidad a nuestro indice, decidimos categorizar algunas variables para obtener visualizaciones que nos ayuden más.
+
+```{r}
+categcolum <- function(daf,col,names)
+{
+  v <- as.numeric(scale(daf[,col]))
+  n <- length(names)
+  dim <- length(v)
+  part <- 1/n
+  r <- c()
+  for (i in 1:dim)
+  {
+    if(v[i] <= -1)
+      r[i] <- names[1]
+    else
+      if(v[i] <= 1)
+      r[i] <- names[2]
+      else
+        r[i] <- names[3]
+  }
+  return(r)
+}
+```
 
