--- a/Data/PCA.Rmd
+++ b/Data/PCA.Rmd
@@ -5,7 +5,7 @@ date: "14/5/2020"
 output: html_document
 ---
 
-```{r}
+```{r, echo=FALSE}
 library(ggplot2)
 library(factoextra)
 ```
@@ -13,15 +13,25 @@ library(factoextra)
 ```{r,echo = FALSE}
 df<- read.csv("BD.csv")
 df[,5:13]<-df[,5:13]/df[,3]
-df[,13] <- df[,13]*1000 #miles de pesos
-df <- df[,c(8,11:16)]
-names(df) <- c("X1","X2","X3","X4","X5","X6","X7")
+df[,13]<-df[,13]*1000 #Remuneración en miles de pesos
+df[,15]<-df[,15]/100 
+df <- df[,-c(1,2,3,4,8,9,10,12,14,15)]
+names(df) <- c("X1","X2","X3","X4","X5","X6") #Todas las variables estan en terminos poblacionales
+attr(df$X1, "descripcion") <- "Ingresos Inferiores. "
+attr(df$X2, "descripcion") <- "Carencia de Alimentos."
+attr(df$X3, "descripcion") <- "Carencia de Salud."
+attr(df$X4, "descripcion") <- "Personal medico"
+attr(df$X5, "descripcion") <- "Remuneracion (miles de pesos)"
+attr(df$X6, "descripcion") <- "Promedio años de escolaridad"
+#str(df)
 head(df)
 ```
+## Calculo de los Componentes Principales
+
 Para calcular los componentes principales, usaremos la matriz de correlación dado que las unidades de nuestras variables son distintas, a pesar de que la mayoria esten en terminos poblacionales.
 
-```{r, echo=FALSE,include=FALSE}
-#solo para comparar
+```{r, echo=FALS,include=FALSE}
+#solo para comparar y para fines graficos
 z <- princomp(df,cor = T)
 summary(z, loadings=T)
 ```
@@ -33,24 +43,23 @@ Para eso scamos la matriz de correlacion $R$ que es la siguiente.
 Ahora para calcular las componentes principales encontraremos sus egienvecores.
 ```{r}
 eig <- eigen(R)
-(y <- round(eig$vectors,3)) #lo multiplicamos por -1 simplemente por practicidad
+(y <- round(eig$vectors,3)*-1) #lo multiplicamos por -1 simplemente por interpretacion
 ```
 
-## Falta llenar estos valores
+
 Podemos ver que los componentes principales obtenidos de la matriz de correlación, son los siguientes.
 $$\begin{array}{l}
-Y_{1} =  0.266X_{1} + 0.421X_{2}+ 0.428X_{3} + 0.344X_{4} - 0.389X_{5} - 0.369X_{6} - 0.292X_{7} - 0.279X_{8}\\
-Y_{2} =  0.521X_{1} - 0.124X_{3} - 0.516X_{4} + 0.414X_{5} - 0.17X_{6} - 0.482X_{7} - 0.101X_{8}\\
-Y_{3} =  0.293X_{1} + 0.156X_{3} - 0.449X_{6} + 0.373X_{7} + 0.733X_{8}\\
-Y_{4} =  0.615X_{1} - 0.252X_{2} - 203X_{3} + 0.312X_{4} - 0.322X_{5} + 0.493X_{6} - 0.144X_{7} + 0.229X_{8}\\
-Y_{5} =  0.287X_{1} + 0.534X_{2} - 0.499X_{3} + 0.566X_{7} -0.322X_{8} \\
-Y_{6} =  0.296X_{1} - 0.643X_{2} - 0.238X_{3} + -0.243X_{6} + 0.406X_{7} - 0.467X_{8}\\
-Y_{7} =  0.104X_{1} + 0.215X_{2} + 0.673X_{3} -  0.363X_{4} + 0.567X_{6} + 0.186X_{7}\\
-Y_{8} =  0.117X_{1} + 0.155X_{3} +  0.613X_{4} + 0.755X_{5}\\
+Y_{1} =  0.449X_{1} + 0.371X_{2} + 0.405X_{3} - 0.395X_{4} - 0.380X_{5} - 0.442X_{6}\\
+Y_{2} =  0.115X_{1} + 0.308X_{2} + 0.390X_{3} + 0.531X_{4} + 0.618X_{5} - 0.275X_{6}\\
+Y_{3} =  0.415X_{1} - 0.813X_{2} + 0.035X_{3} - 0.058X_{4} + 0.200X_{5} - 0.349X_{6}\\
+Y_{4} =  0.245X_{1} + 0.309X_{2} - 0.805X_{3} - 0.112X_{4} + 0.251X_{5} - 0.347X_{6}\\
+Y_{5} = -0.210X_{1} + 0.042X_{2} + 0.183X_{3} - 0.738X_{4} + 0.598X_{5} + 0.135X_{6} \\
+Y_{6} = -0.713X_{1} - 0.097X_{2} + 0.008X_{3} - 0.018X_{4} - 0.113X_{5} - 0.685X_{6}\\
 \end{array}$$
 
+## Graficas y Analisis
 
-Haremos la grafica de codo correspondiente,para dererminar cuales son las componentes mas significativas.
+Haremos la grafica de codo correspondiente, para dererminar cuales son las componentes mas significativas.
 Para realizar esto, veremos que tanta varianza aporta cada componente principal, mediante el siguiente razonamiento.
 
 $$\frac{\lambda_{k}}{\lambda_{1} + ... + \lambda_{k}}$$
@@ -62,11 +71,43 @@ aport_var <- function(l)
   l/lsum
 }
 var <- aport_var(eig$values)
+names(var) <- c("l1","l2","l3","l4","l5","l6")
 plot(var,type="o",ylab = "Porcentaje de varianza expresada", xlab = "Componente")
 ```
 
+
 ```{r}
-fviz_screeplot(z)
+fviz_screeplot(z,barfill = "purple",barcolor = "green",linecolor = "red",addlabels =TRUE)
+fviz_screeplot(z,geom = "line",linecolor = "red" ,addlabels =TRUE)
 ```
 
-## Hacer mas graficas y mas analisis
+```{r}
+fviz_pca_var(z,col.var="contrib")
+```
+
+```{r}
+library(gridExtra)
+gr1 <- fviz_contrib(z,choice = "var", axes = 1)
+gr2 <- fviz_contrib(z,choice = "var", axes = 2)
+grid.arrange(gr1, gr2, ncol = 2)
+```
+
+
+```{r}
+fviz_pca_ind(z,
+             col.ind = "cos2", # Color by the quality of representation
+             gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
+             repel = TRUE     # Avoid text overlapping
+             )
+```
+
+```{r}
+fviz_pca_biplot(z, repel = TRUE,
+                col.var = "#2E9FDF", # Variables color
+                col.ind = "#696969"  # Individuals color
+                )
+```
+
+##Interpretaión de las graficas
+##Grafica con elipses aplica aqui?
+##Cemaforo de la ciudad de México
