--- a/Data/PCA.Rmd
+++ b/Data/PCA.Rmd
@@ -124,9 +124,20 @@ fviz_pca_biplot(z, repel = TRUE,
 
 ##Interpretaión de las graficas
 ##Grafica con elipses aplica aqui?
+
+##Índice por delegación
+
+```{r}
+c("Álvaro Obregón", "Azcapotzalco", "Benito Juárez", "Coyoacán", "Cuajimalpa de Morelos", "Cuahutémoc", "Gustavo A. Madero","Iztacalco","Iztapalapa","La Magdalena Contreras", "Miguel Hidalgo", "Milá Alta", "Tláhuac", "Tlalpan", "Venustiano Carranza", "Xochimilco")
+```
+
+
 ##Cemaforo de la ciudad de México
 
 ```{r}
 #cargamos los datos de los scores por alcaldía
+mapa<-st_read("~/ITAM/Décimo/index/alcaldias/alcaldias.shp",stringsAsFactors=FALSE)
+str(mapa)
+mapa_datos <- inner_join(mapa,index)
 ```
 
